# veloren-server-bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: check.yml  image.yml
src/: discord.rs  logger.rs  main.rs  settings.rs  state.rs  utils.rs
src/checks/: admin.rs  mod.rs
src/commands/: admin.rs  files.rs  help.rs  info.rs  mod.rs  owner.rs  utils.rs
src/commands/admin/: args.rs  cargo.rs  envs.rs  exec.rs  files.rs  mod.rs
src/server/: mod.rs  task.rs
