[package]
name = "veloren_server_bot"
version = "0.2.4"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = false

[dependencies]
# Async
tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
futures = "0.3.30"
# Logging
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.38"
log = "0.4.22"
# Config
config = { version = "0.14.0", features = ["yaml"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
# Error handling
anyhow = "1.0.86"
# Discord
poise = "0.6.1"
# Other
linked_hash_set = { version = "0.1.4", features = ["serde"] }
